--- a/.gitignore
+++ b/.gitignore
@@ -931,3 +931,4 @@ S2z3/5/node_modules/has/README.md
 S2z3/5/node_modules/has/package.json
 S2z3/5/node_modules/has/LICENSE-MIT
 S2z3/5/node_modules/has-symbols/test/tests.js
+S2z1/node_modules/.package-lock.json
