--- a/.gitignore
+++ b/.gitignore
@@ -4907,3 +4907,4 @@ S2z5/3/.env
 S2z5/1/node_modules/@types/node/diagnostics_channel.d.ts
 S2z5/1/node_modules/@types/whatwg-url/dist/URLSearchParams-impl.d.ts
 S2z5/1/node_modules/mongodb/src/operations/estimated_document_count.ts
+S2z6/1/.env
