--- a/.gitignore
+++ b/.gitignore
@@ -4908,3 +4908,4 @@ S2z5/1/node_modules/@types/node/diagnostics_channel.d.ts
 S2z5/1/node_modules/@types/whatwg-url/dist/URLSearchParams-impl.d.ts
 S2z5/1/node_modules/mongodb/src/operations/estimated_document_count.ts
 S2z6/1/.env
+Ads_board/.env
